# cargo-onedoc

./: Cargo.toml  README.md
.github/workflows/: build.yaml
src/: README_TEMPLATE.md  config.rs  main.rs  render.rs
src/config/: input.rs  mod.rs
src/fix/: code_blocks.rs  doc_links.rs  headings.rs  links.rs  mod.rs  rel_links.rs  summary.rs
