[package]
name = "cargo-onedoc"
version = "0.0.2"
authors = ["Ross MacArthur <ross@macarthur.io>"]
edition = "2021"
description = "Generate your README.md from Rust doc comments"
readme = "README.md"
repository = "https://github.com/rossmacarthur/cargo-onedoc"
license = "MIT OR Apache-2.0"
keywords = ["readme", "markdown", "documentation", "cargo"]
categories = ["development-tools::cargo-plugins"]
include = ["src/**/*", "LICENSE-*", "README.md"]

[dependencies]
upon = "0.6.0"
pulldown-cmark = "0.9.2"
pulldown-cmark-to-cmark = "10.0.4"
anyhow = "1.0.66"
cargo_metadata = "0.15.2"
camino = "1.1.1"
serde = { version = "1.0.147", features = ["derive"] }
toml = "0.5.9"
regex-macro = "0.2.0"
pulldown-cmark-toc = "0.1.1"

[dependencies.clap]
version = "4.0.26"
default-features = false
features = [
    "std", "help", "usage", "error-context", "suggestions", # default excluding "color"
    "cargo", "env", "derive"                                # optional
]
