[package]
name = "cargo-onedoc"
version = "0.0.3"
authors = ["Ross MacArthur <ross@macarthur.io>"]
edition = "2021"
description = "Generate your README.md from Rust doc comments"
readme = "README.md"
repository = "https://github.com/rossmacarthur/cargo-onedoc"
license = "MIT OR Apache-2.0"
keywords = ["readme", "markdown", "documentation", "cargo"]
categories = ["development-tools::cargo-plugins"]
include = ["src/**/*", "LICENSE-*", "README.md"]

[dependencies]
anyhow = "1.0.66"
camino = "1.1.1"
cargo_metadata = "0.15.2"
pulldown-cmark = "0.9.2"
pulldown-cmark-to-cmark = "10.0.4"
pulldown-cmark-toc = "0.1.1"
regex-macro = "0.2.0"
serde = { version = "1.0.147", features = ["derive"] }
toml = "0.5.9"
upon = "0.6.0"

[dependencies.clap]
version = "4.0.26"
default-features = false
features = [
    "std", "help", "usage", "error-context", "suggestions", # default excluding "color"
    "cargo", "env", "derive"                                # optional
]
