[package]
name = "cargo-onedoc"
version = "0.0.5"
authors = ["Ross MacArthur <ross@macarthur.io>"]
edition = "2021"
description = "Generate your README.md from Rust doc comments"
readme = "README.md"
repository = "https://github.com/rossmacarthur/cargo-onedoc"
license = "MIT OR Apache-2.0"
keywords = ["readme", "markdown", "documentation", "cargo"]
categories = ["development-tools::cargo-plugins"]
include = ["src/**/*", "LICENSE-*", "README.md"]

[dependencies]
anyhow = "1.0.72"
camino = "1.1.6"
cargo_metadata = "0.17.0"
pulldown-cmark = "0.9.3"
pulldown-cmark-to-cmark = "10.0.4"
pulldown-cmark-toc = "0.2.0"
regex-macro = "0.2.0"
serde = { version = "1.0.181", features = ["derive"] }
toml = "0.7.6"
upon = "0.7.1"

[dependencies.clap]
version = "4.3.19"
default-features = false
features = [
    "std", "help", "usage", "error-context", "suggestions", # default excluding "color"
    "cargo", "env", "derive"                                # optional
]
